# Stroke-PT

./: README.md  main.py  pyproject.toml
src/: data.csv  feature_import.csv  main.ipynb  main.py  model.py
