[project]
name = "stroke-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.6.4",
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
